crates/connectors/ndc-postgres/tests/snapshots/query_tests__predicates__select_where_name_nsimilar.snap
---
source: crates/connectors/ndc-postgres/tests/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "AlbumId": 1,
        "Title": "For Those About To Rock We Salute You"
      },
      {
        "AlbumId": 4,
        "Title": "Let There Be Rock"
      },
      {
        "AlbumId": 6,
        "Title": "Jagged Little Pill"
      },
      {
        "AlbumId": 7,
        "Title": "Facelift"
      },
      {
        "AlbumId": 8,
        "Title": "Warner 25 Anos"
      }
    ]
  }
]
