crates/connectors/ndc-postgres/tests/snapshots/query_tests__predicates__select_where_name_similar.snap
---
source: crates/connectors/ndc-postgres/tests/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "AlbumId": 2,
        "Title": "Balls to the Wall"
      },
      {
        "AlbumId": 3,
        "Title": "Restless and Wild"
      },
      {
        "AlbumId": 5,
        "Title": "Big Ones"
      },
      {
        "AlbumId": 12,
        "Title": "BackBeat Soundtrack"
      },
      {
        "AlbumId": 16,
        "Title": "Black Sabbath"
      }
    ]
  }
]
