crates/connectors/ndc-postgres/tests/snapshots/query_tests__predicates__select_where_related_exists.snap
---
source: crates/connectors/ndc-postgres/tests/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "title": "Santana",
        "albums": {
          "rows": [
            {
              "title": "Supernatural"
            },
            {
              "title": "Santana - As Years Go By"
            },
            {
              "title": "Santana Live"
            }
          ]
        }
      }
    ]
  }
]
